<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/gridcardview"
    android:layout_width="@dimen/_140sdp"
    android:layout_height="wrap_content"
    android:background="@null"
    android:splitMotionEvents="false"
    app:cardUseCompatPadding="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/framlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:padding="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_140sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_app_logo"
                     />

                <RelativeLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_10sdp"
                    android:background="@drawable/main_page_bg"
                    android:backgroundTint="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textSize="@dimen/_10ssp"
                        android:text="@string/app_name"
                        android:textColor="@color/yellow"
                        android:textStyle="normal" />
                </RelativeLayout>
            </LinearLayout>
<!--            <View-->
<!--                android:layout_width="match_parent"-->
<!--                android:background="@color/lightBlack"-->
<!--                android:layout_marginVertical="@dimen/_5sdp"-->
<!--                android:layout_height="@dimen/_1sdp"/>-->
            <LinearLayout
                android:id="@+id/ll_rate_us"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_18sdp">

                <ImageView
                    android:layout_width="@dimen/_34sdp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_rate_us"
                    app:tint="@color/lightBlack" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="@dimen/_10ssp"
                    android:text="@string/rate_us"
                    android:textColor="@color/lightBlack"
                    android:textStyle="bold" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:background="@color/lightBlack"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_height="@dimen/_1sdp"/>
            <LinearLayout
                android:id="@+id/ll_more_apps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_18sdp">

                <ImageView
                    android:layout_width="@dimen/_34sdp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_more_apps"
                    app:tint="@color/lightBlack" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="@dimen/_10ssp"
                    android:text="@string/more_apps"
                    android:textColor="@color/lightBlack"
                    android:textStyle="bold" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:background="@color/lightBlack"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_height="@dimen/_1sdp"/>
            <LinearLayout
                android:id="@+id/ll_share_apps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_18sdp">

                <ImageView
                    android:layout_width="@dimen/_34sdp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_share"
                    app:tint="@color/lightBlack" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="@dimen/_10ssp"
                    android:text="@string/share_app"
                    android:textColor="@color/lightBlack"
                    android:textStyle="bold" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:background="@color/lightBlack"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_height="@dimen/_1sdp"/>
            <LinearLayout
                android:id="@+id/ll_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_18sdp">

                <ImageView
                    android:layout_width="@dimen/_34sdp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_privacy"
                    app:tint="@color/lightBlack" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="@dimen/_10ssp"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/lightBlack"
                    android:textStyle="bold" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:background="@color/lightBlack"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_height="@dimen/_1sdp"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_height="@dimen/_10sdp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>


